--- a/README
+++ b/README
@@ -12,4 +12,4 @@ https://en.wikipedia.org/wiki/Calcium_in_biology
 # catatonia
 https://en.wikipedia.org/wiki/Catatonia
 
-bemoeigurus at work
+bemoeigurus at work © 2002-2021
