--- a/README
+++ b/README
@@ -11,6 +11,9 @@ https://en.wikipedia.org/wiki/Cement
 # calcium in biology
 https://en.wikipedia.org/wiki/Calcium_in_biology
 
+# neuroleptic malignant syndrome
+https://en.wikipedia.org/wiki/Neuroleptic_malignant_syndrome
+
 # neurodegeneration
 https://en.wikipedia.org/wiki/Neurodegeneration
 
